# ChangeLog for sys-kernel/ck-sources
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ck-sources/ChangeLog,v 1.4 2003/02/12 09:16:29 vapier Exp $

  17 Dec 2002; Brandon Low <lostlogic@gentoo.org>:
  Make all kernel-sources SLOT="${KV}"

*ck-sources-2.4.20-r1 (08 Dec 2002)

  08 Dec 2002; Brandon Low <lostlogic@gentoo.org> ck-sources-2.4.20-r1.ebuild:

  New package for -ck sources, Con Kolivas is a w00t mad kernel
  benchmarker, in general his kernels are known to be VERY low latency. 
  This means that on a desktop system responsiveness to your input will
  be excellent, but that on a server, the total throughput of the system
  may not be as good as some other kernels. Enjoy.