@@ -1,0 +1,2 @@
+MD5 c439d5c93d7fc9a1480a90842465bb97 linux-2.4.20.tar.bz2 27421046
+MD5 711f2443fb471404077403bfe3253f9b ck4_2.4.20.patch.bz2 1429780
